# texpp

./: .gitignore  CMakeLists.txt  Dockerfile-py2  Dockerfile-py3  Makefile  README  README.md  _setup.py  linux-compile.sh
CMakeListsFolder/: CMakeListsPython2.txt  CMakeListsPython3.txt
hrefkeywords/: CMakeLists.txt  _chrefliterals.cc  _chrefliterals.h  bibliography.cpp  bibliography.h
tests/: CMakeLists.txt  test_citations.cc  test_hrefkeywords.cc  test_lexer.cc  test_literal.cpp  test_parser.cc  testbundle.h  texpp.cc
tests/tex/: CMakeLists.txt  test_source.cc  test_tex.cc
tests/texParts/: abstract.tex  anotherFile.tex  begin_document.tex  bibliography.tex  cite.tex  head.tex  skelet.tex
texpp/: CMakeLists.txt  command.cc  command.h  common.cc  common.h  kpsewhich.cc  kpsewhich.h  lexer.cc  lexer.h  logger.cc  logger.h  parser.cc  parser.h  token.cc  token.h
texpp/base/: base.cc  base.h  bibliography.cc  bibliography.h  box.cc  box.h  files.cc  files.h  func.cc  func.h  misc.cc  misc.h
texpy/: boost_any.cc  lexer.cc  parser.cc  python_file_stream.h
